# autodiff-cpp

./: .appveyor.yml  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  FindADCpp.cmake  adcpp-config.in.cmake
dep/: CMakeLists.txt
examples/: CMakeLists.txt  backward_diff.cpp  forward_diff.cpp
include/: CMakeLists.txt  ForwardAD.hpp  adcpp.h  adcpp_eigen.h
include/adcpp/: adcpp.hpp  adcpp_eigen.hpp  forward_ad.h  forward_ad_eigen.h
src/: fad.cpp
test/: CMakeLists.txt  adcpp_backward.cpp  adcpp_eigen_backward.cpp  adcpp_eigen_forward.cpp  adcpp_forward.cpp  eigen_assert.h  forward_ad.cpp  forward_ad_eigen.cpp
test/assert/: eigen_require.h
tests/: CMakeLists.txt
tests/include/assert/: eigen_require.hpp
tests/src/: adcpp_backward.test.cpp  adcpp_eigen_backward.test.cpp  adcpp_eigen_forward.test.cpp  adcpp_forward.test.cpp  main.cpp
